force-app/main/default/objects/LiveChat_transcript__c/LiveChat_transcript__c.object-meta.xml
<CustomObject>
    <description>LiveChat - Chat Information and Transcript dedicated object.</description>
    <label>Chat transcript</label>
    <nameField>
        <displayFormat>Chat - {00000}</displayFormat>
        <label>Chat transcript Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Chat transcripts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>