force-app/main/default/objects/LiveChat_transcript__c/fields/End_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Chat end time</label>
    <type>DateTime</type>
</CustomField>