force-app/main/default/objects/LiveChat_transcript__c/fields/isStored__c.field-meta.xml
<CustomField>
    <fullName>isStored__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Stored</label>
    <type>Checkbox</type>
</CustomField>