force-app/main/default/objects/LiveChat_transcript__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Chat Transcripts</relationshipLabel>
    <relationshipName>Chat_transcripts</relationshipName>
    <type>Lookup</type>
</CustomField>