force-app/main/default/objects/LiveChat_transcript__c/fields/Operator__c.field-meta.xml
<CustomField>
    <fullName>Operator__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Operator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>